force-app/main/default/objects/Business_Outcome_Mapping__c/Business_Outcome_Mapping__c.object-meta.xml
<CustomObject>
    <description>Master data for mapping Business outcome to be sent to AVAYA</description>
    <label>Business Outcome Mapping</label>
    <nameField>
        <displayFormat>bus-outcome-{0000}</displayFormat>
        <label>Business Outcome Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Outcome Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>