force-app/main/default/objects/Business_Outcome_Mapping__c/fields/Avaya_Completion_Code__c.field-meta.xml
<CustomField>
    <fullName>Avaya_Completion_Code__c</fullName>
    <label>Avaya Completion Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES Complete Sale</fullName>
            </value>
            <value>
                <fullName>NIN Not Interest</fullName>
            </value>
            <value>
                <fullName>NIN Not Interest - Recall</fullName>
            </value>
            <value>
                <fullName>NQF Not Qualify</fullName>
            </value>
            <value>
                <fullName>WPC Wrong Party Contact</fullName>
            </value>
            <value>
                <fullName>ANSM Answering Machine</fullName>
            </value>
            <value>
                <fullName>NANS No Answer</fullName>
            </value>
            <value>
                <fullName>L_BUSY Line Busy</fullName>
            </value>
            <value>
                <fullName>Recall release</fullName>
            </value>
            <value>
                <fullName>HU Customer hang up call</fullName>
            </value>
            <value>
                <fullName>FAX FAX</fullName>
            </value>
            <value>
                <fullName>DNC Do Not Call - 1 Year</fullName>
            </value>
            <value>
                <fullName>DNC Do Not Call - Life Time</fullName>
            </value>
            <value>
                <fullName>Silent Call</fullName>
            </value>
            <value>
                <fullName>WRPN Wrong Phone Number</fullName>
            </value>
            <value>
                <fullName>DNC Do Not Call</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
                <isActive>false</isActive>
                <label>Fax</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>