force-app/main/default/objects/Business_Outcome_Mapping__c/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Uncontact</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Do Not Contact 1year</fullName>
            </value>
            <value>
                <fullName>Do Not Contact LifeTime</fullName>
            </value>
            <value>
                <fullName>Do Not Contact 6 Months</fullName>
                <isActive>false</isActive>
                <label>Do Not Contact 6 Months</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>