force-app/main/default/objects/Business_Outcome_Mapping__c/fields/Offer_Result__c.field-meta.xml
<CustomField>
    <fullName>Offer_Result__c</fullName>
    <label>Offer Result</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Contacted &amp; In progress</fullName>
            </value>
            <value>
                <fullName>Closed (Interested)</fullName>
            </value>
            <value>
                <fullName>Closed (Not Interested)</fullName>
            </value>
            <value>
                <fullName>Closed (Unable to contact)</fullName>
            </value>
            <value>
                <fullName>Closed (Unqualified)</fullName>
            </value>
            <value>
                <fullName>Closed By AL System</fullName>
            </value>
            <value>
                <fullName>Invalid (Duplicate Opportunity)</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Closed (Transferred)</fullName>
            </value>
            <value>
                <fullName>Closed (Referral Ticket)</fullName>
            </value>
            <value>
                <fullName>Closed (Service Completed)</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Not Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>