force-app/main/default/objects/Business_Outcome_Mapping__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Not Interest Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>