force-app/main/default/objects/Business_Outcome_Mapping__c/fields/Retail_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Retail_Product_Group__c</fullName>
    <label>Retail Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Loan</fullName>
            </value>
            <value>
                <fullName>Bancassurance</fullName>
            </value>
            <value>
                <fullName>Credit Card &amp; RDC</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Loan Retention</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>