force-app/main/default/objects/Business_Outcome_Mapping__c/fields/Screen_type__c.field-meta.xml
<CustomField>
    <fullName>Screen_type__c</fullName>
    <label>Screen type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound Campaign Member</fullName>
            </value>
            <value>
                <fullName>Juristic Lead</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>