force-app/main/default/objects/Business_Outcome_Mapping__c/fields/Uncontact_Reason__c.field-meta.xml
<CustomField>
    <fullName>Uncontact_Reason__c</fullName>
    <label>Uncontact Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>เครื่องตอบรับอัตโนมัติ</fullName>
            </value>
            <value>
                <fullName>ไม่ใช่ลูกค้าที่ต้องการติดต่อ</fullName>
            </value>
            <value>
                <fullName>ลูกค้าไม่รับสาย</fullName>
            </value>
            <value>
                <fullName>สายไม่ว่าง</fullName>
            </value>
            <value>
                <fullName>เสียชีวิต</fullName>
            </value>
            <value>
                <fullName>หมายเลขไม่เปิดใช้บริการ</fullName>
            </value>
            <value>
                <fullName>แฟกส์</fullName>
            </value>
            <value>
                <fullName>สายหลุด</fullName>
            </value>
            <value>
                <fullName>เสียงเงียบ</fullName>
            </value>
            <value>
                <fullName>ติดต่อลูกค้าแล้ว/ลงทะเบียนซ้ำ</fullName>
            </value>
            <value>
                <fullName>คุณสมบัติเบื้องต้นไม่ผ่านเกณฑ์</fullName>
            </value>
            <value>
                <fullName>ระบบมีปัญหา</fullName>
            </value>
            <value>
                <fullName>ลูกค้าวางสาย</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>