force-app/main/default/objects/Business_Outcome_Mapping__c/validationRules/Uncontact_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Uncontact_Reason</fullName>
    <active>true</active>
    <description>if contact status = uncontact, uncontact reason can not be blank</description>
    <errorConditionFormula>if( ISPICKVAL(Contact_Status__c,&quot;Uncontact&quot;) 
			&amp;&amp; ISBLANK(TEXT(Uncontact_Reason__c))
		,TRUE
		,FALSE)</errorConditionFormula>
    <errorDisplayField>Uncontact_Reason__c</errorDisplayField>
    <errorMessage>Please Enter Uncontact Reason</errorMessage>
</ValidationRule>