force-app/main/default/objects/Business_Outcome_Mapping__c/listViews/All_Contact_Status.listView-meta.xml
<ListView>
    <fullName>All_Contact_Status</fullName>
    <columns>NAME</columns>
    <columns>Contact_Status__c</columns>
    <columns>Retail_Product_Group__c</columns>
    <columns>Offer_Result__c</columns>
    <columns>Reason__c</columns>
    <columns>Avaya_Completion_Code__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Contact_Status__c</field>
        <operation>equals</operation>
        <value>Contact</value>
    </filters>
    <label>All Contact Status</label>
    <language>en_US</language>
</ListView>