force-app/main/default/objects/Business_Outcome_Mapping__c/listViews/All_Uncontact_Status.listView-meta.xml
<ListView>
    <fullName>All_Uncontact_Status</fullName>
    <columns>NAME</columns>
    <columns>Contact_Status__c</columns>
    <columns>Uncontact_Reason__c</columns>
    <columns>Avaya_Completion_Code__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Status__c</field>
        <operation>equals</operation>
        <value>Uncontact</value>
    </filters>
    <label>All Uncontact Status</label>
    <language>en_US</language>
</ListView>