force-app/main/default/objects/Business_Outcome_Mapping__c/listViews/Inactive_Outcome.listView-meta.xml
<ListView>
    <fullName>Inactive_Outcome</fullName>
    <columns>NAME</columns>
    <columns>Contact_Status__c</columns>
    <columns>Uncontact_Reason__c</columns>
    <columns>Retail_Product_Group__c</columns>
    <columns>Offer_Result__c</columns>
    <columns>Reason__c</columns>
    <columns>Avaya_Completion_Code__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Outcome</label>
    <language>en_US</language>
</ListView>